[tool.poetry]
name = "at-simulation-mocking"
version = "1.0.1"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
